gary/david fixed mobile/tablet spacing for topics

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_secondaryItems.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_secondaryItems.scss
@@ -1,7 +1,15 @@
 ﻿.subitem-outer-container {
     padding-left: 10px;
     padding-right: 10px;
+
+    @media #{$mobile,$tablet} {
+        margin-top: 20px;
+    }
+
+                             
 }
+
+
 
 .subitems-secondary {
     display: inline-block;
@@ -39,6 +47,8 @@
             }
             
         }
+
+        
     }
 }
 #test-topic-page-secondary-topics-list > ul > li> div > a {
@@ -70,6 +80,12 @@
         margin-right: 0;
     }
 
+    .subitem-teaser
+        {
+            word-wrap: break-word; 
+            padding-left: 15px; 
+            padding-right: 15px;
+        }
 
     a {
         text-decoration: underline;
